--- a/templates/index.html
+++ b/templates/index.html
@@ -79,6 +79,13 @@
             <div class="form-text">İçerik üretim projeksiyonu için senaryo seçiniz</div>
         </div>
 
+        <div class="col-md-6">
+            <label for="proj_months" class="form-label">Projeksiyon Süresi (Ay):</label>
+            <input id="proj_months" name="proj_months" type="number" min="1" max="120" required
+                   class="form-control" value="{{ form_values.proj_months }}" />
+            <div class="form-text">Projeksiyon kaç ay sürsün? (örn: 12, 24, 36...)</div>
+        </div>
+
         <div class="col-12 text-center">
             <button type="submit" class="btn btn-primary px-5 mt-3">Hesapla</button>
         </div>
@@ -106,13 +113,13 @@
                 {% for row in table.itertuples() %}
                 <tr>
                     <td>{{ row.Ay }}</td>
-                    <td class="bass-col">{{ row._2 }}</td>
-                    <td>{{ row._3 }}</td>
-                    <td>{{ row._4 }}</td>
-                    <td class="bass-col">{{ row._5 }}</td>
-                    <td>{{ row._6 }}</td>
-                    <td>{{ row._7 }}</td>
-                    <td>{{ row._8 }}</td>
+                    <td class="bass-col">{{ "{:,}".format(row._2) }}</td>
+                    <td>{{ "{:,}".format(row._3) }}</td>
+                    <td>{{ "{:,}".format(row._4) }}</td>
+                    <td class="bass-col">{{ "{:,}".format(row._5) }}</td>
+                    <td>{{ "{:,}".format(row._6) }}</td>
+                    <td>{{ "{:,}".format(row._7) }}</td>
+                    <td>{{ "{:,}".format(row._8) }}</td>
                     <td>{{ row._9 }}</td>
                     <td>{{ row._10 }}</td>
                 </tr>
@@ -133,30 +140,29 @@
 
     <div class="text-muted small mt-4">
         <p><strong>Modelleme Notu:</strong> Kullanıcı yayılımı <em>Bass Difüzyon Modeli</em> kullanılarak hesaplanmıştır.</p>
-        <p> Tüik verilerine göre internete erişimi olan kişi sayısı: <strong>75 Milyon Kişidir</strong> </p>
+        <p> TÜİK verilerine göre internete erişimi olan kişi sayısı: <strong>75 Milyon Kişidir</strong>.</p>
         <p>Girilen pazar büyüklüğü <strong>{{ form_values.market_size }}</strong> olup, önümüzdeki yıl içerisinde bu kadar kullanıcıya erişileceği öngörülmüştür.</p>
         <p><strong>Not:</strong> Bass modelindeki <code>p</code> ve <code>q</code> değerleri literatürde genellikle <code>p=0.01–0.03</code> ve <code>q=0.3–0.5</code> aralığında kabul görmektedir.</p>
-        <p>İçerik Üretim Oranları: Sosyal medya platformlarında içerik üreticisi oranı genellikle <em>1% kuralı</em> ile 1–9% arasında değişen kreatör kullanıcılar olarak tanımlanmaktadır.</p>
-        <p>Kaynaklar:</p>
+        <p>İçerik Üretim Oranları: Sosyal medya platformlarında içerik üreticisi oranı genellikle <em>1% kuralı</em> ile %1–%9 arasında değişen kreatör kullanıcılar olarak tanımlanmaktadır.</p>
+        <p><strong>Kaynaklar:</strong></p>
         <ul>
-            <ul>
-                <li>
-                    Bass, F. M. (1969). <em>A new product growth for model consumer durables</em>. <strong>Management Science</strong>, 15(5), 215–227. 
-                    <br>
-                    <a href="https://doi.org/10.1287/mnsc.15.5.215" target="_blank">Kaynağı Görüntüle</a>
-                </li>
-                <li>
-                    PyMC Marketing Bass Model Örneği:
-                    <br>
-                    <a href="https://www.pymc-marketing.io/en/latest/notebooks/bass/bass_example.html" target="_blank">Örneği Görüntüle</a>
-                </li>
-                <li>
-                    TÜİK Hanehalkı Bilişim Teknolojileri (BT) Kullanım Araştırması:
-                    <br>
-                    <a href="https://data.tuik.gov.tr/Bulten/Index?p=Hanehalki-Bilisim-Teknolojileri-(BT)-Kullanim-Arastirmasi-2024-53492" target="_blank">Raporu Görüntüle</a>
-                </li>
-            </ul>
-        </ul>            
+            <li>
+                Bass, F. M. (1969). <em>A new product growth for model consumer durables</em>. <strong>Management Science</strong>, 15(5), 215–227.
+                <br>
+                <a href="https://doi.org/10.1287/mnsc.15.5.215" target="_blank">Kaynağı Görüntüle</a>
+            </li>
+            <li>
+                PyMC Marketing Bass Model Örneği:
+                <br>
+                <a href="https://www.pymc-marketing.io/en/latest/notebooks/bass/bass_example.html" target="_blank">Örneği Görüntüle</a>
+            </li>
+            <li>
+                TÜİK Hanehalkı Bilişim Teknolojileri (BT) Kullanım Araştırması:
+                <br>
+                <a href="https://data.tuik.gov.tr/Bulten/Index?p=Hanehalki-Bilisim-Teknolojileri-(BT)-Kullanim-Arastirmasi-2024-53492" target="_blank">Raporu Görüntüle</a>
+            </li>
+        </ul>
+    </div>
     {% endif %}
 </body>
 </html>
