--- a/templates/index.html
+++ b/templates/index.html
@@ -133,9 +133,9 @@
     </div>
 
     <h2 class="mt-5 mb-3 text-center">Projeksiyon Grafikleri</h2>
-    <p class="text-center text-muted small">Not: Aşağıdaki içerik projeksiyonu, kullanıcı churn oranı ve içerik üretme motivasyonu zamanla azalacak şekilde modellenmiştir.</p>
 
     <div class="text-center mb-5">
+        <h5>Kullanıcı Projeksiyonu</h5>
         <img src="{{ url_for('static', filename='graphs/kullanici_projeksiyon.png') }}" class="img-fluid mb-4" alt="Kullanıcı Grafiği">
 
         <h5>Aylık İçerik Projeksiyonu</h5>
