--- a/templates/index.html
+++ b/templates/index.html
@@ -153,7 +153,8 @@
         <p> TÜİK verilerine göre internete erişimi olan kişi sayısı: <strong>75 Milyon Kişidir</strong>.</p>
         <p>Girilen pazar büyüklüğü <strong>{{ form_values.market_size }}</strong>, seçilen projeksiyon dönemi içerisinde bu kadar potansiyele kullanıcıya erişileceği öngörülmüştür.</p>
         <p><strong>Not:</strong> Bass modelindeki <code>p</code> ve <code>q</code> değerleri literatürde genellikle <code>Innovator Adoption Rate =0.01–0.03</code> ve <code>Imitator Adoption Rate=0.3–0.5</code> aralığında kabul görmektedir.</p>
-        <p>İçerik Üretim Oranları: Sosyal medya platformlarında içerik üreticisi oranı genellikle <em>1% kuralı</em> ile %1–%9 arasında değişen kreatör kullanıcılar olarak tanımlanmaktadır.</p>
+        <p>İçerik Üretim Oranları: Sosyal medya platformlarında içerik üreticisi oranı genellikle <em>1% kuralı</em> ile %1–%9 arasında değişen İçerik Üreticisi  kullanıcılar olarak tanımlanmaktadır.</p>
+        <p> Mevcut durumda son ay verileri incelenediğinde Küre platformunda bir içerik üreticisinin günlük ortalama ürettiği içerik sayısı 0.01 olarak tespit edilmiştir.</p>
         <p><strong>Kaynaklar:</strong></p>
         <ul>
             <li>
