--- a/templates/index.html
+++ b/templates/index.html
@@ -139,7 +139,7 @@
         <p><strong>Modelleme Notu:</strong> Kullanıcı yayılımı <em>Bass Difüzyon Modeli</em> kullanılarak hesaplanmıştır.</p>
         <p>İçerik üretimi, her ay kullanıcıların aktif kalma oranının (churn) zamanla azalması göz önünde bulundurularak hesaplanmıştır.</p>
         <p>TÜİK verilerine göre internete erişimi olan kişi sayısı: <strong>75 Milyon Kişidir</strong>.</p>
-        <p>Girilen pazar büyüklüğü <strong>{{ form_values.market_size }}</strong>, erişilebilecek potansiyel kullanıcı sayısını ifade etmektedir.</p>
+        <p>Girilen pazar büyüklüğü kişi sayısı değeri <strong>{{ form_values.market_size }}</strong>, erişilebilecek potansiyel kullanıcı sayısını ifade etmektedir.</p>
         <p><strong>Not:</strong> Bass modelindeki <code>p</code> ve <code>q</code> değerleri literatürde genellikle <code>Innovator Adoption Rate = 0.01–0.03</code> ve <code>Imitator Adoption Rate = 0.3–0.5</code> aralığında kabul görmektedir.</p>
         <p>İçerik Üretim Oranları: Sosyal medya platformlarında içerik üreticisi oranı genellikle <code>%1–%9</code> arasında değişmektedir.</p>
         <p>Mevcut durumda son ay verileri incelendiğinde Küre platformunda bir içerik üreticisinin günlük ortalama ürettiği içerik sayısı <code>0.03</code> olarak tespit edilmiştir.</p>
