--- a/templates/index.html
+++ b/templates/index.html
@@ -150,5 +150,9 @@
             <li>TÜİK BT Kullanım Araştırması: <a href="https://data.tuik.gov.tr/Bulten/Index?p=Hanehalki-Bilisim-Teknolojileri-(BT)-Kullanim-Arastirmasi-2024-53492" target="_blank">Raporu Görüntüle</a></li>
         </ul>
     </div>
+      <div class="text-end text-muted small mt-5">
+        <p>© 2025 Elcuman tarafından hazırlanmıştır.</p>
+    </div>
 </body>
 </html>
+
